Fix feedback sent notif behind bus info

--- a/css/index.css
+++ b/css/index.css
@@ -263,7 +263,7 @@ html, body {
     padding: 0.5rem 1.5rem;
     border-radius: 15px;
     color: white;
-    z-index: 401;
+    z-index: 402;
     font-size: 1.5rem;
     font-family: var(--font-family);
     top: 1rem;
